<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_reg_background"
    tools:context=".login_register.RegisterActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:background="@color/transparent"
        android:backgroundTint="#33363F"
        android:layout_gravity="left"
        app:srcCompat="@drawable/round_arrow_back_black" />

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your account!"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/name"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/gender"
            android:textColor="#617867"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="40dp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:background="@drawable/login_reg_edittext_background"
                android:id="@+id/gender_spinner"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/age"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qualification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/qualification"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextQualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/email"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/password"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/confirm_pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/donegal_one"
            android:text="@string/confirm_password"
            android:textColor="#617867"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/login_reg_edittext_background"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/donegal_one"
            android:backgroundTint="@color/sky_blue"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>